put Android2D inside separate package, update SVG