@@ -24,31 +24,42 @@
 
 package processing.core;
 
+
 import processing.data.*;
-
 import java.util.HashMap;
-
+import java.util.Map;
 import android.graphics.*;
 
-
 /**
- * SVG stands for Scalable Vector Graphics, a portable graphics format. It is
- * a vector format so it allows for infinite resolution and relatively small
- * file sizes. Most modern media software can view SVG files, including Adobe
- * products, Firefox, etc. Illustrator and Inkscape can edit SVG files.
+ * This class is not part of the Processing API and should not be used
+ * directly. Instead, use loadShape() and methods like it, which will make
+ * use of this class. Using this class directly will cause your code to break
+ * when combined with future versions of Processing.
+ * <p>
+ * SVG stands for Scalable Vector Graphics, a portable graphics format.
+ * It is a vector format so it allows for "infinite" resolution and relatively
+ * small file sizes. Most modern media software can view SVG files, including
+ * Adobe products, Firefox, etc. Illustrator and Inkscape can edit SVG files.
+ * View the SVG specification <A HREF="http://www.w3.org/TR/SVG">here</A>.
  * <p>
  * We have no intention of turning this into a full-featured SVG library.
- * The goal of this project is a basic shape importer that is small enough
- * to be included with applets, meaning that its download size should be
- * in the neighborhood of 25-30k. Starting with release 0149, this library
- * has been incorporated into the core via the loadShape() command, because
- * vector shape data is just as important as the image data from loadImage().
+ * The goal of this project is a basic shape importer that originally was small
+ * enough to be included with applets, meaning that its download size should be
+ * in the neighborhood of 25-30 Kb. Though we're far less limited nowadays on
+ * size constraints, we remain extremely limited in terms of time, and do not
+ * have volunteers who are available to maintain a larger SVG library.
  * <p>
  * For more sophisticated import/export, consider the
  * <A HREF="http://xmlgraphics.apache.org/batik/">Batik</A>
- * library from the Apache Software Foundation. Future improvements to this
- * library may focus on this properly supporting a specific subset of SVG,
- * for instance the simpler SVG profiles known as
+ * library from the Apache Software Foundation.
+ * <p>
+ * Batik is used in the SVG Export library in Processing 3, however using it
+ * for full SVG import is still a considerable amount of work. Wiring it to
+ * Java2D wouldn't be too bad, but using it with OpenGL, JavaFX, and features
+ * like begin/endRecord() and begin/endRaw() would be considerable effort.
+ * <p>
+ * Future improvements to this library may focus on this properly supporting
+ * a specific subset of SVG, for instance the simpler SVG profiles known as
  * <A HREF="http://www.w3.org/TR/SVGMobile/">SVG Tiny or Basic</A>,
  * although we still would not support the interactivity options.
  *
@@ -69,128 +80,87 @@ import android.graphics.*;
  *   shape(moo, mouseX, mouseY);
  * }
  * </PRE>
- *
- * This code is based on the Candy library written by Michael Chang, which was
- * later revised and expanded for use as a Processing core library by Ben Fry.
- * Thanks to Ricard Marxer Pinon for help with better Inkscape support in 0154.
- *
- * <p> <hr noshade> <p>
- *
- * Late October 2008 revisions from ricardmp, incorporated by fry (0154)
- * <UL>
- * <LI>Better style attribute handling, enabling better Inkscape support.
- * </UL>
- *
- * October 2008 revisions by fry (Processing 0149, pre-1.0)
- * <UL>
- * <LI> Candy is no longer a separate library, and is instead part of core.
- * <LI> Loading now works through loadShape()
- * <LI> Shapes are now drawn using the new PGraphics shape() method.
- * </UL>
- *
- * August 2008 revisions by fry (Processing 0149)
- * <UL>
- * <LI> Major changes to rework around PShape.
- * <LI> Now implementing more of the "transform" attribute.
- * </UL>
- *
- * February 2008 revisions by fry (Processing 0136)
- * <UL>
- * <LI> Added support for quadratic curves in paths (Q, q, T, and t operators)
- * <LI> Support for reading SVG font data (though not rendering it yet)
- * </UL>
- *
- * Revisions for "Candy 2" November 2006 by fry
- * <UL>
- * <LI> Switch to the new processing.xml library
- * <LI> Several bug fixes for parsing of shape data
- * <LI> Support for linear and radial gradients
- * <LI> Support for additional types of shapes
- * <LI> Added compound shapes (shapes with interior points)
- * <LI> Added methods to get shapes from an internal table
- * </UL>
- *
- * Revision 10/31/06 by flux
- * <UL>
- * <LI> Now properly supports Processing 0118
- * <LI> Fixed a bunch of things for Casey's students and general buggity.
- * <LI> Will now properly draw #FFFFFFFF colors (were being represented as -1)
- * <LI> SVGs without <g> tags are now properly caught and loaded
- * <LI> Added a method customStyle() for overriding SVG colors/styles
- * <LI> Added a method SVGStyle() to go back to using SVG colors/styles
- * </UL>
- *
- * Some SVG objects and features may not yet be supported.
- * Here is a partial list of non-included features
- * <UL>
- * <LI> Rounded rectangles
- * <LI> Drop shadow objects
- * <LI> Typography
- * <LI> <STRIKE>Layers</STRIKE> added for Candy 2
- * <LI> Patterns
- * <LI> Embedded images
- * </UL>
- *
- * For those interested, the SVG specification can be found
- * <A HREF="http://www.w3.org/TR/SVG">here</A>.
  */
 public class PShapeSVG extends PShape {
   XML element;
 
   /// Values between 0 and 1.
-  float opacity;
+  protected float opacity;
   float strokeOpacity;
   float fillOpacity;
 
+  /** Width of containing SVG (used for percentages). */
+  protected float svgWidth;
 
-  Gradient strokeGradient;
-  Shader strokeGradientPaint;
+  /** Height of containing SVG (used for percentages). */
+  protected float svgHeight;
+
+  /** √((w² + h²)/2) of containing SVG (used for percentages). */
+  protected float svgSizeXY;
+
+  protected Gradient strokeGradient;
   String strokeName;  // id of another object, gradients only?
 
-  Gradient fillGradient;
-  Shader fillGradientPaint;
+  protected Gradient fillGradient;
   String fillName;  // id of another object
 
 
-//  /**
-//   * Initializes a new SVG Object with the given filename.
-//   */
-//  public PShapeSVG(PApplet parent, String filename) {
-//    // this will grab the root document, starting <svg ...>
-//    // the xml version and initial comments are ignored
-//    this(parent.loadXML(filename));
-//  }
-
-
   /**
-   * Initializes a new SVG Object from the given PNode.
+   * Initializes a new SVG object from the given XML object.
    */
   public PShapeSVG(XML svg) {
     this(null, svg, true);
 
     if (!svg.getName().equals("svg")) {
-      throw new RuntimeException("root is not <svg>, it's <" + svg.getName() + ">");
+      if (svg.getName().toLowerCase().equals("html")) {
+        // Common case is that files aren't downloaded properly
+        throw new RuntimeException("This appears to be a web page, not an SVG file.");
+      } else {
+        throw new RuntimeException("The root node is not <svg>, it's <" + svg.getName() + ">");
+      }
     }
+  }
 
-    // not proper parsing of the viewBox, but will cover us for cases where
-    // the width and height of the object is not specified
-    String viewBoxStr = svg.getString("viewBox");
-    if (viewBoxStr != null) {
-      int[] viewBox = PApplet.parseInt(PApplet.splitTokens(viewBoxStr));
-      width = viewBox[2];
-      height = viewBox[3];
-    }
 
-    // TODO if viewbox is not same as width/height, then use it to scale
-    // the original objects. for now, viewbox only used when width/height
-    // are empty values (which by the spec means w/h of "100%"
-    String unitWidth = svg.getString("width");
-    String unitHeight = svg.getString("height");
-    if (unitWidth != null) {
-      width = parseUnitSize(unitWidth);
-      height = parseUnitSize(unitHeight);
-    } else {
-      if ((width == 0) || (height == 0)) {
+  protected PShapeSVG(PShapeSVG parent, XML properties, boolean parseKids) {
+    setParent(parent);
+
+    // Need to get width/height in early.
+    if (properties.getName().equals("svg")) {
+      String unitWidth = properties.getString("width");
+      String unitHeight = properties.getString("height");
+
+      // Can't handle width/height as percentages easily. I'm just going
+      // to put in 100 as a dummy value, beacuse this means that it will
+      // come out as a reasonable value.
+      if (unitWidth  != null) width  = parseUnitSize(unitWidth,  100);
+      if (unitHeight != null) height = parseUnitSize(unitHeight, 100);
+
+      String viewBoxStr = properties.getString("viewBox");
+      if (viewBoxStr != null) {
+        float[] viewBox = PApplet.parseFloat(PApplet.splitTokens(viewBoxStr));
+        if (unitWidth == null || unitHeight == null) {
+          // Not proper parsing of the viewBox, but will cover us for cases where
+          // the width and height of the object is not specified.
+          width = viewBox[2];
+          height = viewBox[3];
+        } else {
+          // http://www.w3.org/TR/SVG/coords.html#ViewBoxAttribute
+          // TODO: preserveAspectRatio.
+          if (matrix == null) matrix = new PMatrix2D();
+          matrix.scale(width/viewBox[2], height/viewBox[3]);
+          matrix.translate(-viewBox[0], -viewBox[1]);
+        }
+      }
+
+      // Negative size is illegal.
+      if (width < 0 || height < 0)
+        throw new RuntimeException("<svg>: width (" + width +
+        ") and height (" + height + ") must not be negative.");
+
+      // It's technically valid to have width or height == 0. Not specified at
+      // all is what to test for.
+      if ((unitWidth == null || unitHeight == null) && viewBoxStr == null) {
         //throw new RuntimeException("width/height not specified");
         PGraphics.showWarning("The width and/or height is not " +
                               "readable in the <svg> tag of this file.");
@@ -200,62 +170,10 @@ public class PShapeSVG extends PShape {
         width = 1;
         height = 1;
       }
-    }
 
-    //root = new Group(null, svg);
-//    parseChildren(svg);  // ?
-  }
-
-
-  protected PShapeSVG(PShapeSVG parent, XML properties, boolean parseKids) {
-    // Need to set this so that findChild() works.
-    // Otherwise 'parent' is null until addChild() is called later.
-    this.parent = parent;
-
-    if (parent == null) {
-      // set values to their defaults according to the SVG spec
-      stroke = false;
-      strokeColor = 0xff000000;
-      strokeWeight = 1;
-      strokeCap = PConstants.SQUARE;  // equivalent to BUTT in svg spec
-      strokeJoin = PConstants.MITER;
-      strokeGradient = null;
-      strokeGradientPaint = null;
-      strokeName = null;
-
-      fill = true;
-      fillColor = 0xff000000;
-      fillGradient = null;
-      fillGradientPaint = null;
-      fillName = null;
-
-      //hasTransform = false;
-      //transformation = null; //new float[] { 1, 0, 0, 1, 0, 0 };
-
-      strokeOpacity = 1;
-      fillOpacity = 1;
-      opacity = 1;
-
-    } else {
-      stroke = parent.stroke;
-      strokeColor = parent.strokeColor;
-      strokeWeight = parent.strokeWeight;
-      strokeCap = parent.strokeCap;
-      strokeJoin = parent.strokeJoin;
-      strokeGradient = parent.strokeGradient;
-      strokeGradientPaint = parent.strokeGradientPaint;
-      strokeName = parent.strokeName;
-
-      fill = parent.fill;
-      fillColor = parent.fillColor;
-      fillGradient = parent.fillGradient;
-      fillGradientPaint = parent.fillGradientPaint;
-      fillName = parent.fillName;
-
-      //hasTransform = parent.hasTransform;
-      //transformation = parent.transformation;
-
-      opacity = parent.opacity;
+      svgWidth = width;
+      svgHeight = height;
+      svgSizeXY = PApplet.sqrt((svgWidth*svgWidth + svgHeight*svgHeight)/2.0f);
     }
 
     element = properties;
@@ -275,13 +193,86 @@ public class PShapeSVG extends PShape {
 
     String transformStr = properties.getString("transform");
     if (transformStr != null) {
-      matrix = parseTransform(transformStr);
+      if (matrix == null) {
+        matrix = parseTransform(transformStr);
+      } else {
+        matrix.preApply(parseTransform(transformStr));
+      }
     }
 
     if (parseKids) {
       parseColors(properties);
       parseChildren(properties);
     }
+  }
+
+
+  // Broken out so that subclasses can copy any additional variables
+  // (i.e. fillGradientPaint and strokeGradientPaint)
+  protected void setParent(PShapeSVG parent) {
+    // Need to set this so that findChild() works.
+    // Otherwise 'parent' is null until addChild() is called later.
+    this.parent = parent;
+
+    if (parent == null) {
+      // set values to their defaults according to the SVG spec
+      stroke = false;
+      strokeColor = 0xff000000;
+      strokeWeight = 1;
+      strokeCap = PConstants.SQUARE;  // equivalent to BUTT in svg spec
+      strokeJoin = PConstants.MITER;
+      strokeGradient = null;
+//      strokeGradientPaint = null;
+      strokeName = null;
+
+      fill = true;
+      fillColor = 0xff000000;
+      fillGradient = null;
+//      fillGradientPaint = null;
+      fillName = null;
+
+      //hasTransform = false;
+      //transformation = null; //new float[] { 1, 0, 0, 1, 0, 0 };
+
+      // svgWidth, svgHeight, and svgXYSize done below.
+
+      strokeOpacity = 1;
+      fillOpacity = 1;
+      opacity = 1;
+
+    } else {
+      stroke = parent.stroke;
+      strokeColor = parent.strokeColor;
+      strokeWeight = parent.strokeWeight;
+      strokeCap = parent.strokeCap;
+      strokeJoin = parent.strokeJoin;
+      strokeGradient = parent.strokeGradient;
+//      strokeGradientPaint = parent.strokeGradientPaint;
+      strokeName = parent.strokeName;
+
+      fill = parent.fill;
+      fillColor = parent.fillColor;
+      fillGradient = parent.fillGradient;
+//      fillGradientPaint = parent.fillGradientPaint;
+      fillName = parent.fillName;
+
+      svgWidth  = parent.svgWidth;
+      svgHeight = parent.svgHeight;
+      svgSizeXY = parent.svgSizeXY;
+
+      opacity = parent.opacity;
+    }
+
+    // The rect and ellipse modes are set to CORNER since it is the expected
+    // mode for svg shapes.
+    rectMode = CORNER;
+    ellipseMode = CORNER;
+  }
+
+
+  /** Factory method for subclasses. */
+  protected PShapeSVG createShape(PShapeSVG parent, XML properties, boolean parseKids) {
+    return new PShapeSVG(parent, properties, parseKids);
   }
 
 
@@ -292,12 +283,7 @@ public class PShapeSVG extends PShape {
 
     for (XML elem : elements) {
       PShape kid = parseChild(elem);
-      if (kid != null) {
-//        if (kid.name != null) {
-//          System.out.println("adding child " + kid.name);
-//        }
-        addChild(kid);
-      }
+      if (kid != null) addChild(kid);
     }
     children = (PShape[]) PApplet.subset(children, 0, childCount);
   }
@@ -312,53 +298,44 @@ public class PShapeSVG extends PShape {
     String name = elem.getName();
     PShapeSVG shape = null;
 
+
     if (name == null) {
       // just some whitespace that can be ignored (hopefully)
 
     } else if (name.equals("g")) {
-      //return new BaseObject(this, elem);
-      shape = new PShapeSVG(this, elem, true);
+      shape = createShape(this, elem, true);
 
     } else if (name.equals("defs")) {
       // generally this will contain gradient info, so may
       // as well just throw it into a group element for parsing
-      //return new BaseObject(this, elem);
-      shape = new PShapeSVG(this, elem, true);
+      shape = createShape(this, elem, true);
 
     } else if (name.equals("line")) {
-      //return new Line(this, elem);
-      //return new BaseObject(this, elem, LINE);
-      shape = new PShapeSVG(this, elem, true);
+      shape = createShape(this, elem, true);
       shape.parseLine();
 
     } else if (name.equals("circle")) {
-      //return new BaseObject(this, elem, ELLIPSE);
-      shape = new PShapeSVG(this, elem, true);
+      shape = createShape(this, elem, true);
       shape.parseEllipse(true);
 
     } else if (name.equals("ellipse")) {
-      //return new BaseObject(this, elem, ELLIPSE);
-      shape = new PShapeSVG(this, elem, true);
+      shape = createShape(this, elem, true);
       shape.parseEllipse(false);
 
     } else if (name.equals("rect")) {
-      //return new BaseObject(this, elem, RECT);
-      shape = new PShapeSVG(this, elem, true);
+      shape = createShape(this, elem, true);
       shape.parseRect();
 
     } else if (name.equals("polygon")) {
-      //return new BaseObject(this, elem, POLYGON);
-      shape = new PShapeSVG(this, elem, true);
+      shape = createShape(this, elem, true);
       shape.parsePoly(true);
 
     } else if (name.equals("polyline")) {
-      //return new BaseObject(this, elem, POLYGON);
-      shape = new PShapeSVG(this, elem, true);
+      shape = createShape(this, elem, true);
       shape.parsePoly(false);
 
     } else if (name.equals("path")) {
-      //return new BaseObject(this, elem, PATH);
-      shape = new PShapeSVG(this, elem, true);
+      shape = createShape(this, elem, true);
       shape.parsePath();
 
     } else if (name.equals("radialGradient")) {
@@ -376,14 +353,9 @@ public class PShapeSVG extends PShape {
 //    } else if (name.equals("glyph") || name.equals("missing-glyph")) {
 //      return new FontGlyph(this, elem);
 
-    } else if (name.equals("metadata")) {
-      // fontforge just stuffs this in as a comment
-      return null;
-
     } else if (name.equals("text")) {  // || name.equals("font")) {
-      PGraphics.showWarning("Text and fonts in SVG files " +
-                                  "are not currently supported, " +
-                            "convert text to outlines instead.");
+      PGraphics.showWarning("Text and fonts in SVG files are " +
+        "not currently supported, convert text to outlines instead.");
 
     } else if (name.equals("filter")) {
       PGraphics.showWarning("Filters are not supported.");
@@ -400,7 +372,13 @@ public class PShapeSVG extends PShape {
     } else if (name.equals("sodipodi:namedview")) {
       // these are always in Inkscape files, the warnings get tedious
 
-    } else {
+    } else if (name.equals("metadata")
+        || name.equals("title") || name.equals("desc")) {
+      // fontforge just stuffs <metadata> in as a comment.
+      // All harmless stuff, irrelevant to rendering.
+      return null;
+
+    } else if (!name.startsWith("#")) {
       PGraphics.showWarning("Ignoring <" + name + "> tag.");
 //      new Exception().printStackTrace();
     }
@@ -412,10 +390,10 @@ public class PShapeSVG extends PShape {
     kind = LINE;
     family = PRIMITIVE;
     params = new float[] {
-      getFloatWithUnit(element, "x1"),
-      getFloatWithUnit(element, "y1"),
-      getFloatWithUnit(element, "x2"),
-      getFloatWithUnit(element, "y2")
+      getFloatWithUnit(element, "x1", svgWidth),
+      getFloatWithUnit(element, "y1", svgHeight),
+      getFloatWithUnit(element, "x2", svgWidth),
+      getFloatWithUnit(element, "y2", svgHeight)
     };
   }
 
@@ -429,15 +407,15 @@ public class PShapeSVG extends PShape {
     family = PRIMITIVE;
     params = new float[4];
 
-    params[0] = getFloatWithUnit(element, "cx");
-    params[1] = getFloatWithUnit(element, "cy");
+    params[0] = getFloatWithUnit(element, "cx", svgWidth);
+    params[1] = getFloatWithUnit(element, "cy", svgHeight);
 
     float rx, ry;
     if (circle) {
-      rx = ry = getFloatWithUnit(element, "r");
+      rx = ry = getFloatWithUnit(element, "r", svgSizeXY);
     } else {
-      rx = getFloatWithUnit(element, "rx");
-      ry = getFloatWithUnit(element, "ry");
+      rx = getFloatWithUnit(element, "rx", svgWidth);
+      ry = getFloatWithUnit(element, "ry", svgHeight);
     }
     params[0] -= rx;
     params[1] -= ry;
@@ -451,16 +429,17 @@ public class PShapeSVG extends PShape {
     kind = RECT;
     family = PRIMITIVE;
     params = new float[] {
-      getFloatWithUnit(element, "x"),
-      getFloatWithUnit(element, "y"),
-      getFloatWithUnit(element, "width"),
-      getFloatWithUnit(element, "height")
+      getFloatWithUnit(element, "x", svgWidth),
+      getFloatWithUnit(element, "y", svgHeight),
+      getFloatWithUnit(element, "width", svgWidth),
+      getFloatWithUnit(element, "height", svgHeight)
     };
   }
 
 
   /**
    * Parse a polyline or polygon from an SVG file.
+   * Syntax defined at http://www.w3.org/TR/SVG/shapes.html#PointsBNF
    * @param close true if shape is closed (polygon), false if not (polyline)
    */
   protected void parsePoly(boolean close) {
@@ -473,9 +452,9 @@ public class PShapeSVG extends PShape {
       vertexCount = pointsBuffer.length;
       vertices = new float[vertexCount][2];
       for (int i = 0; i < vertexCount; i++) {
-        String pb[] = PApplet.split(pointsBuffer[i], ',');
-        vertices[i][X] = Float.valueOf(pb[0]).floatValue();
-        vertices[i][Y] = Float.valueOf(pb[1]).floatValue();
+        String pb[] = PApplet.splitTokens(pointsBuffer[i], ", \t\r\n");
+        vertices[i][X] = Float.parseFloat(pb[0]);
+        vertices[i][Y] = Float.parseFloat(pb[1]);
       }
     }
   }
@@ -491,7 +470,7 @@ public class PShapeSVG extends PShape {
     }
     char[] pathDataChars = pathData.toCharArray();
 
-    StringBuffer pathBuffer = new StringBuffer();
+    StringBuilder pathBuffer = new StringBuilder();
     boolean lastSeparate = false;
 
     for (int i = 0; i < pathDataChars.length; i++) {
@@ -506,7 +485,7 @@ public class PShapeSVG extends PShape {
           c == 'S' || c == 's' ||
           c == 'Q' || c == 'q' ||  // quadratic beziers
           c == 'T' || c == 't' ||
-//          c == 'A' || c == 'a' ||  // elliptical arc
+          c == 'A' || c == 'a' ||  // elliptical arc
           c == 'Z' || c == 'z' ||  // closepath
           c == ',') {
         separate = true;
@@ -574,6 +553,8 @@ public class PShapeSVG extends PShape {
       case 'm':  // m - move to (relative)
         cx = cx + PApplet.parseFloat(pathTokens[i + 1]);
         cy = cy + PApplet.parseFloat(pathTokens[i + 2]);
+        movetoX = cx;
+        movetoY = cy;
         parsePathMoveto(cx, cy);
         implicitCommand = 'l';
         i += 3;
@@ -802,6 +783,40 @@ public class PShapeSVG extends PShape {
       }
         break;
 
+      // A - elliptical arc to (absolute)
+      case 'A': {
+        float rx = PApplet.parseFloat(pathTokens[i + 1]);
+        float ry = PApplet.parseFloat(pathTokens[i + 2]);
+        float angle = PApplet.parseFloat(pathTokens[i + 3]);
+        boolean fa = PApplet.parseFloat(pathTokens[i + 4]) != 0;
+        boolean fs = PApplet.parseFloat(pathTokens[i + 5]) != 0;
+        float endX = PApplet.parseFloat(pathTokens[i + 6]);
+        float endY = PApplet.parseFloat(pathTokens[i + 7]);
+        parsePathArcto(cx, cy, rx, ry, angle, fa, fs, endX, endY);
+        cx = endX;
+        cy = endY;
+        i += 8;
+        prevCurve = true;
+      }
+      break;
+
+      // a - elliptical arc to (relative)
+      case 'a': {
+        float rx = PApplet.parseFloat(pathTokens[i + 1]);
+        float ry = PApplet.parseFloat(pathTokens[i + 2]);
+        float angle = PApplet.parseFloat(pathTokens[i + 3]);
+        boolean fa = PApplet.parseFloat(pathTokens[i + 4]) != 0;
+        boolean fs = PApplet.parseFloat(pathTokens[i + 5]) != 0;
+        float endX = cx + PApplet.parseFloat(pathTokens[i + 6]);
+        float endY = cy + PApplet.parseFloat(pathTokens[i + 7]);
+        parsePathArcto(cx, cy, rx, ry, angle, fa, fs, endX, endY);
+        cx = endX;
+        cy = endY;
+        i += 8;
+        prevCurve = true;
+      }
+      break;
+
       case 'Z':
       case 'z':
         // since closing the path, the 'current' point needs
@@ -820,11 +835,6 @@ public class PShapeSVG extends PShape {
           PApplet.join(PApplet.subset(pathTokens, i), ",");
         System.err.println("parsed: " + parsed);
         System.err.println("unparsed: " + unparsed);
-        if (pathTokens[i].equals("a") || pathTokens[i].equals("A")) {
-          String msg = "Sorry, elliptical arc support for SVG files " +
-            "is not yet implemented (See issue 130 for updates)";
-          throw new RuntimeException(msg);
-        }
         throw new RuntimeException("shape command not handled: " + pathTokens[i]);
       }
 //      prevCommand = c;
@@ -910,6 +920,93 @@ public class PShapeSVG extends PShape {
   }
 
 
+  // Approximates elliptical arc by several bezier segments.
+  // Meets SVG standard requirements from:
+  //   http://www.w3.org/TR/SVG/paths.html#PathDataEllipticalArcCommands
+  //   http://www.w3.org/TR/SVG/implnote.html#ArcImplementationNotes
+  // Based on arc to bezier curve equations from:
+  //   http://www.spaceroots.org/documents/ellipse/node22.html
+  private void parsePathArcto(float x1,    float y1,
+                              float rx,    float ry,
+                              float angle,
+                              boolean fa,  boolean fs,
+                              float x2,    float y2) {
+    if (x1 == x2 && y1 == y2) return;
+    if (rx == 0 || ry == 0) { parsePathLineto(x2, y2);  return; }
+
+    rx = PApplet.abs(rx);  ry = PApplet.abs(ry);
+
+    float phi = PApplet.radians(((angle % 360) + 360) % 360);
+    float cosPhi = PApplet.cos(phi),  sinPhi = PApplet.sin(phi);
+
+    float x1r = ( cosPhi * (x1 - x2) + sinPhi * (y1 - y2)) / 2;
+    float y1r = (-sinPhi * (x1 - x2) + cosPhi * (y1 - y2)) / 2;
+
+    float cxr, cyr;
+    {
+      float A = (x1r*x1r) / (rx*rx) + (y1r*y1r) / (ry*ry);
+      if (A > 1) {
+        // No solution, scale ellipse up according to SVG standard
+        float sqrtA = PApplet.sqrt(A);
+        rx *= sqrtA;  cxr = 0;
+        ry *= sqrtA;  cyr = 0;
+      } else {
+        float k = ((fa == fs) ? -1f : 1f) *
+          PApplet.sqrt((rx*rx * ry*ry) / ((rx*rx * y1r*y1r) + (ry*ry * x1r*x1r)) - 1f);
+        cxr =  k * rx * y1r / ry;
+        cyr = -k * ry * x1r / rx;
+      }
+    }
+
+    float cx = cosPhi * cxr - sinPhi * cyr + (x1 + x2) / 2;
+    float cy = sinPhi * cxr + cosPhi * cyr + (y1 + y2) / 2;
+
+    float phi1, phiDelta;
+    {
+      float sx = ( x1r - cxr) / rx,  sy = ( y1r - cyr) / ry;
+      float tx = (-x1r - cxr) / rx,  ty = (-y1r - cyr) / ry;
+      phi1 = PApplet.atan2(sy, sx);
+      phiDelta = (((PApplet.atan2(ty, tx) - phi1) % TWO_PI) + TWO_PI) % TWO_PI;
+      if (!fs) phiDelta -= TWO_PI;
+    }
+
+    // One segment can not cover more that PI, less than PI/2 is
+    // recommended to avoid visible inaccuracies caused by rounding errors
+    int segmentCount = PApplet.ceil(PApplet.abs(phiDelta) / TWO_PI * 4);
+
+    float inc = phiDelta / segmentCount;
+    float a = PApplet.sin(inc) *
+      (PApplet.sqrt(4 + 3 * PApplet.sq(PApplet.tan(inc / 2))) - 1) / 3;
+
+    float sinPhi1 = PApplet.sin(phi1),  cosPhi1 = PApplet.cos(phi1);
+
+    float p1x = x1;
+    float p1y = y1;
+    float relq1x = a * (-rx * cosPhi * sinPhi1 - ry * sinPhi * cosPhi1);
+    float relq1y = a * (-rx * sinPhi * sinPhi1 + ry * cosPhi * cosPhi1);
+
+    for (int i = 0; i < segmentCount; i++) {
+      float eta = phi1 + (i + 1) * inc;
+      float sinEta = PApplet.sin(eta),  cosEta = PApplet.cos(eta);
+
+      float p2x = cx + rx * cosPhi * cosEta - ry * sinPhi * sinEta;
+      float p2y = cy + rx * sinPhi * cosEta + ry * cosPhi * sinEta;
+      float relq2x = a * (-rx * cosPhi * sinEta - ry * sinPhi * cosEta);
+      float relq2y = a * (-rx * sinPhi * sinEta + ry * cosPhi * cosEta);
+
+      if (i == segmentCount - 1) { p2x = x2;  p2y = y2; }
+
+      parsePathCode(BEZIER_VERTEX);
+      parsePathVertex(p1x + relq1x, p1y + relq1y);
+      parsePathVertex(p2x - relq2x, p2y - relq2y);
+      parsePathVertex(p2x, p2y);
+
+      p1x = p2x;  relq1x = relq2x;
+      p1y = p2y;  relq1y = relq2y;
+    }
+  }
+
+
   /**
    * Parse the specified SVG matrix into a PMatrix2D. Note that PMatrix2D
    * is rotated relative to the SVG definition, so parameters are rearranged
@@ -951,13 +1048,11 @@ public class PShapeSVG extends PShape {
     } else if (pieces[1].equals("translate")) {
       float tx = m[0];
       float ty = (m.length == 2) ? m[1] : m[0];
-      //return new float[] { 1, 0, tx,  0, 1, ty };
       return new PMatrix2D(1, 0, tx, 0, 1, ty);
 
     } else if (pieces[1].equals("scale")) {
       float sx = m[0];
       float sy = (m.length == 2) ? m[1] : m[0];
-      //return new float[] { sx, 0, 0, 0, sy, 0 };
       return new PMatrix2D(sx, 0, 0,  0, sy, 0);
 
     } else if (pieces[1].equals("rotate")) {
@@ -973,7 +1068,7 @@ public class PShapeSVG extends PShape {
         PMatrix2D mat = new PMatrix2D(0, 1, m[1],  1, 0, m[2]);
         mat.rotate(m[0]);
         mat.translate(-m[1], -m[2]);
-        return mat; //.get(null);
+        return mat;
       }
 
     } else if (pieces[1].equals("skewX")) {
@@ -1081,7 +1176,7 @@ public class PShapeSVG extends PShape {
 
 
   void setStrokeWeight(String lineweight) {
-    strokeWeight = parseUnitSize(lineweight);
+    strokeWeight = parseUnitSize(lineweight, svgSizeXY);
   }
 
 
@@ -1130,73 +1225,155 @@ public class PShapeSVG extends PShape {
 
 
   void setColor(String colorText, boolean isFill) {
+    colorText = colorText.trim();
     int opacityMask = fillColor & 0xFF000000;
     boolean visible = true;
     int color = 0;
     String name = "";
+//    String lColorText = colorText.toLowerCase();
     Gradient gradient = null;
-    Shader paint = null;
+//    Object paint = null;
     if (colorText.equals("none")) {
       visible = false;
-    } else if (colorText.equals("black")) {
-      color = opacityMask;
-    } else if (colorText.equals("white")) {
-      color = opacityMask | 0xFFFFFF;
-    } else if (colorText.startsWith("#")) {
-      if (colorText.length() == 4) {
-        // Short form: #ABC, transform to long form #AABBCC
-        colorText = colorText.replaceAll("^#(.)(.)(.)$", "#$1$1$2$2$3$3");
-      }
-      color = opacityMask |
-          (Integer.parseInt(colorText.substring(1), 16)) & 0xFFFFFF;
-      //System.out.println("hex for fill is " + PApplet.hex(fillColor));
-    } else if (colorText.startsWith("rgb")) {
-      color = opacityMask | parseRGB(colorText);
     } else if (colorText.startsWith("url(#")) {
       name = colorText.substring(5, colorText.length() - 1);
-//      PApplet.println("looking for " + name);
       Object object = findChild(name);
-      //PApplet.println("found " + fillObject);
       if (object instanceof Gradient) {
         gradient = (Gradient) object;
-        paint = calcGradientPaint(gradient); //, opacity);
-        //PApplet.println("got filla " + fillObject);
+        // in 3.0a11, do this on first draw inside PShapeJava2D
+//        paint = calcGradientPaint(gradient); //, opacity);
       } else {
 //        visible = false;
         System.err.println("url " + name + " refers to unexpected data: " + object);
       }
+    } else {
+      // Prints errors itself.
+      color = opacityMask | parseSimpleColor(colorText);
     }
     if (isFill) {
       fill = visible;
       fillColor = color;
       fillName = name;
       fillGradient = gradient;
-      fillGradientPaint = paint;
+//      fillGradientPaint = paint;
     } else {
       stroke = visible;
       strokeColor = color;
       strokeName = name;
       strokeGradient = gradient;
-      strokeGradientPaint = paint;
+//      strokeGradientPaint = paint;
     }
   }
 
+
+  /**
+   * Parses the "color" datatype only, and prints an error if it is not of this form.
+   * http://www.w3.org/TR/SVG/types.html#DataTypeColor
+   * @return 0xRRGGBB (no alpha). Zero on error.
+   */
+  static protected int parseSimpleColor(String colorText) {
+    colorText = colorText.toLowerCase().trim();
+    //if (colorNames.containsKey(colorText)) {
+    if (colorNames.hasKey(colorText)) {
+      return colorNames.get(colorText);
+    } else if (colorText.startsWith("#")) {
+      if (colorText.length() == 4) {
+        // Short form: #ABC, transform to long form #AABBCC
+        colorText = colorText.replaceAll("^#(.)(.)(.)$", "#$1$1$2$2$3$3");
+      }
+      return (Integer.parseInt(colorText.substring(1), 16)) & 0xFFFFFF;
+      //System.out.println("hex for fill is " + PApplet.hex(fillColor));
+    } else if (colorText.startsWith("rgb")) {
+      return parseRGB(colorText);
+    } else {
+      System.err.println("Cannot parse \"" + colorText + "\".");
+      return 0;
+    }
+  }
+
+
+  /**
+   * Deliberately conforms to the HTML 4.01 color spec + en-gb grey, rather
+   * than the (unlikely to be useful) entire 147-color system used in SVG.
+   */
+  static protected IntDict colorNames = new IntDict(new Object[][] {
+    { "aqua",    0x00ffff },
+    { "black",   0x000000 },
+    { "blue",    0x0000ff },
+    { "fuchsia", 0xff00ff },
+    { "gray",    0x808080 },
+    { "grey",    0x808080 },
+    { "green",   0x008000 },
+    { "lime",    0x00ff00 },
+    { "maroon",  0x800000 },
+    { "navy",    0x000080 },
+    { "olive",   0x808000 },
+    { "purple",  0x800080 },
+    { "red",     0xff0000 },
+    { "silver",  0xc0c0c0 },
+    { "teal",    0x008080 },
+    { "white",   0xffffff },
+    { "yellow",  0xffff00 }
+  });
+
+  /*
+  static protected Map<String, Integer> colorNames;
+  static {
+    colorNames = new HashMap<String, Integer>();
+    colorNames.put("aqua",    0x00ffff);
+    colorNames.put("black",   0x000000);
+    colorNames.put("blue",    0x0000ff);
+    colorNames.put("fuchsia", 0xff00ff);
+    colorNames.put("gray",    0x808080);
+    colorNames.put("grey",    0x808080);
+    colorNames.put("green",   0x008000);
+    colorNames.put("lime",    0x00ff00);
+    colorNames.put("maroon",  0x800000);
+    colorNames.put("navy",    0x000080);
+    colorNames.put("olive",   0x808000);
+    colorNames.put("purple",  0x800080);
+    colorNames.put("red",     0xff0000);
+    colorNames.put("silver",  0xc0c0c0);
+    colorNames.put("teal",    0x008080);
+    colorNames.put("white",   0xffffff);
+    colorNames.put("yellow",  0xffff00);
+  }
+  */
 
   static protected int parseRGB(String what) {
     int leftParen = what.indexOf('(') + 1;
     int rightParen = what.indexOf(')');
     String sub = what.substring(leftParen, rightParen);
-    int[] values = PApplet.parseInt(PApplet.splitTokens(sub, ", "));
-    return (values[0] << 16) | (values[1] << 8) | (values[2]);
+    String[] values = PApplet.splitTokens(sub, ", ");
+    int rgbValue = 0;
+    if (values.length == 3) {
+      // Color spec allows for rgb values to be percentages.
+      for (int i = 0; i < 3; i++) {
+        rgbValue <<= 8;
+        if (values[i].endsWith("%")) {
+          rgbValue |= (int)(PApplet.constrain(255*parseFloatOrPercent(values[i]), 0, 255));
+        } else {
+          rgbValue |= PApplet.constrain(PApplet.parseInt(values[i]), 0, 255);
+        }
+      }
+    } else System.err.println("Could not read color \"" + what + "\".");
+
+    return rgbValue;
   }
 
 
-  static protected HashMap<String, String> parseStyleAttributes(String style) {
-    HashMap<String, String> table = new HashMap<String, String>();
-    String[] pieces = style.split(";");
-    for (int i = 0; i < pieces.length; i++) {
-      String[] parts = pieces[i].split(":");
-      table.put(parts[0], parts[1]);
+  //static protected Map<String, String> parseStyleAttributes(String style) {
+  static protected StringDict parseStyleAttributes(String style) {
+    //Map<String, String> table = new HashMap<String, String>();
+    StringDict table = new StringDict();
+//    if (style == null) return table;
+    if (style != null) {
+      String[] pieces = style.split(";");
+      for (int i = 0; i < pieces.length; i++) {
+        String[] parts = pieces[i].split(":");
+        //table.put(parts[0], parts[1]);
+        table.set(parts[0], parts[1]);
+      }
     }
     return table;
   }
@@ -1207,18 +1384,21 @@ public class PShapeSVG extends PShape {
    * have a unit suffix (length or coordinate).
    * @param element what to parse
    * @param attribute name of the attribute to get
+   * @param relativeTo (float) Used for %. When relative to viewbox, should
+   *    be svgWidth for horizontal dimentions, svgHeight for vertical, and
+   *    svgXYSize for anything else.
    * @return unit-parsed version of the data
    */
-  static protected float getFloatWithUnit(XML element, String attribute) {
+  static protected float getFloatWithUnit(XML element, String attribute, float relativeTo) {
     String val = element.getString(attribute);
-    return (val == null) ? 0 : parseUnitSize(val);
+    return (val == null) ? 0 : parseUnitSize(val, relativeTo);
   }
 
 
   /**
    * Parse a size that may have a suffix for its units.
-   * Ignoring cases where this could also be a percentage.
-   * The <A HREF="http://www.w3.org/TR/SVG/coords.html#Units">units</A> spec:
+   * This assumes 90dpi, which implies, as given in the
+   * <A HREF="http://www.w3.org/TR/SVG/coords.html#Units">units</A> spec:
    * <UL>
    * <LI>"1pt" equals "1.25px" (and therefore 1.25 user units)
    * <LI>"1pc" equals "15px" (and therefore 15 user units)
@@ -1226,8 +1406,11 @@ public class PShapeSVG extends PShape {
    * <LI>"1cm" equals "35.43307px" (and therefore 35.43307 user units)
    * <LI>"1in" equals "90px" (and therefore 90 user units)
    * </UL>
+   * @param relativeTo (float) Used for %. When relative to viewbox, should
+   *    be svgWidth for horizontal dimentions, svgHeight for vertical, and
+   *    svgXYSize for anything else.
    */
-  static protected float parseUnitSize(String text) {
+  static protected float parseUnitSize(String text, float relativeTo) {
     int len = text.length() - 2;
 
     if (text.endsWith("pt")) {
@@ -1242,8 +1425,20 @@ public class PShapeSVG extends PShape {
       return PApplet.parseFloat(text.substring(0, len)) * 90;
     } else if (text.endsWith("px")) {
       return PApplet.parseFloat(text.substring(0, len));
+    } else if (text.endsWith("%")) {
+      return relativeTo * parseFloatOrPercent(text);
     } else {
       return PApplet.parseFloat(text);
+    }
+  }
+
+
+  static protected float parseFloatOrPercent(String text) {
+    text = text.trim();
+    if (text.endsWith("%")) {
+      return Float.parseFloat(text.substring(0, text.length() - 1)) / 100.0f;
+    } else {
+      return Float.parseFloat(text);
     }
   }
 
@@ -1251,12 +1446,12 @@ public class PShapeSVG extends PShape {
   // . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
 
 
-  static class Gradient extends PShapeSVG {
+  static public class Gradient extends PShapeSVG {
     Matrix transform;
 
-    float[] offset;
-    int[] color;
-    int count;
+    public float[] offset;
+    public int[] color;
+    public int count;
 
     public Gradient(PShapeSVG parent, XML properties) {
       super(parent, properties, true);
@@ -1271,22 +1466,25 @@ public class PShapeSVG extends PShape {
         String name = elem.getName();
         if (name.equals("stop")) {
           String offsetAttr = elem.getString("offset");
-          float div = 1.0f;
-          if (offsetAttr.endsWith("%")) {
-            div = 100.0f;
-            offsetAttr = offsetAttr.substring(0, offsetAttr.length() - 1);
-          }
-          offset[count] = PApplet.parseFloat(offsetAttr) / div;
+          offset[count] = parseFloatOrPercent(offsetAttr);
+
           String style = elem.getString("style");
-          HashMap<String, String> styles = parseStyleAttributes(style);
+          //Map<String, String> styles = parseStyleAttributes(style);
+          StringDict styles = parseStyleAttributes(style);
 
           String colorStr = styles.get("stop-color");
-          if (colorStr == null) colorStr = "#000000";
+          if (colorStr == null) {
+            colorStr = elem.getString("stop-color");
+            if (colorStr == null) colorStr = "#000000";
+          }
           String opacityStr = styles.get("stop-opacity");
-          if (opacityStr == null) opacityStr = "1";
-          int tupacity = (int) (PApplet.parseFloat(opacityStr) * 255);
-          color[count] = (tupacity << 24) |
-            Integer.parseInt(colorStr.substring(1), 16);
+          if (opacityStr == null) {
+            opacityStr = elem.getString("stop-opacity");
+            if (opacityStr == null) opacityStr = "1";
+          }
+          int tupacity = PApplet.constrain(
+                          (int)(PApplet.parseFloat(opacityStr) * 255), 0, 255);
+          color[count] = (tupacity << 24) | parseSimpleColor(colorStr);
           count++;
         }
       }
@@ -1296,16 +1494,16 @@ public class PShapeSVG extends PShape {
   }
 
 
-  class LinearGradient extends Gradient {
-    float x1, y1, x2, y2;
+  public class LinearGradient extends Gradient {
+    public float x1, y1, x2, y2;
 
     public LinearGradient(PShapeSVG parent, XML properties) {
       super(parent, properties);
 
-      this.x1 = getFloatWithUnit(properties, "x1");
-      this.y1 = getFloatWithUnit(properties, "y1");
-      this.x2 = getFloatWithUnit(properties, "x2");
-      this.y2 = getFloatWithUnit(properties, "y2");
+      this.x1 = getFloatWithUnit(properties, "x1", svgWidth);
+      this.y1 = getFloatWithUnit(properties, "y1", svgHeight);
+      this.x2 = getFloatWithUnit(properties, "x2", svgWidth);
+      this.y2 = getFloatWithUnit(properties, "y2", svgHeight);
 
       String transformStr =
         properties.getString("gradientTransform");
@@ -1340,15 +1538,15 @@ public class PShapeSVG extends PShape {
   }
 
 
-  class RadialGradient extends Gradient {
-    float cx, cy, r;
+  public class RadialGradient extends Gradient {
+    public float cx, cy, r;
 
     public RadialGradient(PShapeSVG parent, XML properties) {
       super(parent, properties);
 
-      this.cx = getFloatWithUnit(properties, "cx");
-      this.cy = getFloatWithUnit(properties, "cy");
-      this.r  = getFloatWithUnit(properties, "r");
+      this.cx = getFloatWithUnit(properties, "cx", svgWidth);
+      this.cy = getFloatWithUnit(properties, "cy", svgHeight);
+      this.r  = getFloatWithUnit(properties, "r", svgSizeXY);
 
       String transformStr =
         properties.getString("gradientTransform");
@@ -1381,308 +1579,14 @@ public class PShapeSVG extends PShape {
   }
 
 
-/*
-  class LinearGradientPaint implements Paint {
-    float x1, y1, x2, y2;
-    float[] offset;
-    int[] color;
-    int count;
-    float opacity;
-
-    public LinearGradientPaint(float x1, float y1, float x2, float y2,
-                               float[] offset, int[] color, int count,
-                               float opacity) {
-      this.x1 = x1;
-      this.y1 = y1;
-      this.x2 = x2;
-      this.y2 = y2;
-      this.offset = offset;
-      this.color = color;
-      this.count = count;
-      this.opacity = opacity;
-    }
-
-    public PaintContext createContext(ColorModel cm,
-                                      Rectangle deviceBounds, Rectangle2D userBounds,
-                                      AffineTransform xform, RenderingHints hints) {
-      Point2D t1 = xform.transform(new Point2D.Float(x1, y1), null);
-      Point2D t2 = xform.transform(new Point2D.Float(x2, y2), null);
-      return new LinearGradientContext((float) t1.getX(), (float) t1.getY(),
-                                       (float) t2.getX(), (float) t2.getY());
-    }
-
-    public int getTransparency() {
-      return TRANSLUCENT;  // why not.. rather than checking each color
-    }
-
-    public class LinearGradientContext implements PaintContext {
-      int ACCURACY = 2;
-      float tx1, ty1, tx2, ty2;
-
-      public LinearGradientContext(float tx1, float ty1, float tx2, float ty2) {
-        this.tx1 = tx1;
-        this.ty1 = ty1;
-        this.tx2 = tx2;
-        this.ty2 = ty2;
-      }
-
-      public void dispose() { }
-
-      public ColorModel getColorModel() { return ColorModel.getRGBdefault(); }
-
-      public Raster getRaster(int x, int y, int w, int h) {
-        WritableRaster raster =
-          getColorModel().createCompatibleWritableRaster(w, h);
-
-        int[] data = new int[w * h * 4];
-
-        // make normalized version of base vector
-        float nx = tx2 - tx1;
-        float ny = ty2 - ty1;
-        float len = (float) Math.sqrt(nx*nx + ny*ny);
-        if (len != 0) {
-          nx /= len;
-          ny /= len;
-        }
-
-        int span = (int) PApplet.dist(tx1, ty1, tx2, ty2) * ACCURACY;
-        if (span <= 0) {
-          //System.err.println("span is too small");
-          // annoying edge case where the gradient isn't legit
-          int index = 0;
-          for (int j = 0; j < h; j++) {
-            for (int i = 0; i < w; i++) {
-              data[index++] = 0;
-              data[index++] = 0;
-              data[index++] = 0;
-              data[index++] = 255;
-            }
-          }
-
-        } else {
-          int[][] interp = new int[span][4];
-          int prev = 0;
-          for (int i = 1; i < count; i++) {
-            int c0 = color[i-1];
-            int c1 = color[i];
-            int last = (int) (offset[i] * (span-1));
-            //System.out.println("last is " + last);
-            for (int j = prev; j <= last; j++) {
-              float btwn = PApplet.norm(j, prev, last);
-              interp[j][0] = (int) PApplet.lerp((c0 >> 16) & 0xff, (c1 >> 16) & 0xff, btwn);
-              interp[j][1] = (int) PApplet.lerp((c0 >> 8) & 0xff, (c1 >> 8) & 0xff, btwn);
-              interp[j][2] = (int) PApplet.lerp(c0 & 0xff, c1 & 0xff, btwn);
-              interp[j][3] = (int) (PApplet.lerp((c0 >> 24) & 0xff, (c1 >> 24) & 0xff, btwn) * opacity);
-              //System.out.println(j + " " + interp[j][0] + " " + interp[j][1] + " " + interp[j][2]);
-            }
-            prev = last;
-          }
-
-          int index = 0;
-          for (int j = 0; j < h; j++) {
-            for (int i = 0; i < w; i++) {
-              //float distance = 0; //PApplet.dist(cx, cy, x + i, y + j);
-              //int which = PApplet.min((int) (distance * ACCURACY), interp.length-1);
-              float px = (x + i) - tx1;
-              float py = (y + j) - ty1;
-              // distance up the line is the dot product of the normalized
-              // vector of the gradient start/stop by the point being tested
-              int which = (int) ((px*nx + py*ny) * ACCURACY);
-              if (which < 0) which = 0;
-              if (which > interp.length-1) which = interp.length-1;
-              //if (which > 138) System.out.println("grabbing " + which);
-
-              data[index++] = interp[which][0];
-              data[index++] = interp[which][1];
-              data[index++] = interp[which][2];
-              data[index++] = interp[which][3];
-            }
-          }
-        }
-        raster.setPixels(0, 0, w, h, data);
-
-        return raster;
-      }
-    }
-  }
-  */
-
-
-  /*
-  class RadialGradientPaint implements Paint {
-    float cx, cy, radius;
-    float[] offset;
-    int[] color;
-    int count;
-    float opacity;
-
-    public RadialGradientPaint(float cx, float cy, float radius,
-                               float[] offset, int[] color, int count,
-                               float opacity) {
-      this.cx = cx;
-      this.cy = cy;
-      this.radius = radius;
-      this.offset = offset;
-      this.color = color;
-      this.count = count;
-      this.opacity = opacity;
-    }
-
-    public PaintContext createContext(ColorModel cm,
-                                      Rectangle deviceBounds, Rectangle2D userBounds,
-                                      AffineTransform xform, RenderingHints hints) {
-      return new RadialGradientContext();
-    }
-
-    public int getTransparency() {
-      return TRANSLUCENT;
-    }
-
-    public class RadialGradientContext implements PaintContext {
-      int ACCURACY = 5;
-
-      public void dispose() {}
-
-      public ColorModel getColorModel() { return ColorModel.getRGBdefault(); }
-
-      public Raster getRaster(int x, int y, int w, int h) {
-        WritableRaster raster =
-          getColorModel().createCompatibleWritableRaster(w, h);
-
-        int span = (int) radius * ACCURACY;
-        int[][] interp = new int[span][4];
-        int prev = 0;
-        for (int i = 1; i < count; i++) {
-          int c0 = color[i-1];
-          int c1 = color[i];
-          int last = (int) (offset[i] * (span - 1));
-          for (int j = prev; j <= last; j++) {
-            float btwn = PApplet.norm(j, prev, last);
-            interp[j][0] = (int) PApplet.lerp((c0 >> 16) & 0xff, (c1 >> 16) & 0xff, btwn);
-            interp[j][1] = (int) PApplet.lerp((c0 >> 8) & 0xff, (c1 >> 8) & 0xff, btwn);
-            interp[j][2] = (int) PApplet.lerp(c0 & 0xff, c1 & 0xff, btwn);
-            interp[j][3] = (int) (PApplet.lerp((c0 >> 24) & 0xff, (c1 >> 24) & 0xff, btwn) * opacity);
-          }
-          prev = last;
-        }
-
-        int[] data = new int[w * h * 4];
-        int index = 0;
-        for (int j = 0; j < h; j++) {
-          for (int i = 0; i < w; i++) {
-            float distance = PApplet.dist(cx, cy, x + i, y + j);
-            int which = PApplet.min((int) (distance * ACCURACY), interp.length-1);
-
-            data[index++] = interp[which][0];
-            data[index++] = interp[which][1];
-            data[index++] = interp[which][2];
-            data[index++] = interp[which][3];
-          }
-        }
-        raster.setPixels(0, 0, w, h, data);
-
-        return raster;
-      }
-    }
-  }
-  */
-
-
-  protected Shader calcGradientPaint(Gradient gradient) {
-    // TODO just do this with the other parsing
-    int[] colors = new int[gradient.count];
-    int opacityMask = ((int) (opacity * 255)) << 24;
-    for (int i = 0; i < gradient.count; i++) {
-      colors[i] = opacityMask | (gradient.color[i] & 0xFFFFFF);
-    }
-
-    if (gradient instanceof LinearGradient) {
-      LinearGradient grad = (LinearGradient) gradient;
-//      return new LinearGradientPaint(grad.x1, grad.y1, grad.x2, grad.y2,
-//                                     grad.offset, grad.color, grad.count,
-//                                     opacity);
-      return new android.graphics.LinearGradient(grad.x1, grad.y1,
-                                                 grad.x2, grad.y2,
-                                                 colors, grad.offset,
-                                                 Shader.TileMode.CLAMP );
-
-    } else if (gradient instanceof RadialGradient) {
-      RadialGradient grad = (RadialGradient) gradient;
-//      return new RadialGradientPaint(grad.cx, grad.cy, grad.r,
-//                                     grad.offset, grad.color, grad.count,
-//                                     opacity);
-      return new android.graphics.RadialGradient(grad.cx, grad.cy, grad.r,
-                                                 colors, grad.offset,
-                                                 Shader.TileMode.CLAMP);
-    }
-    return null;
-  }
-
-
-//  protected Shader calcGradientPaint(Gradient gradient,
-//                                    float x1, float y1, float x2, float y2) {
-//    if (gradient instanceof LinearGradient) {
-//      LinearGradient grad = (LinearGradient) gradient;
-//      return new LinearGradientPaint(x1, y1, x2, y2,
-//                                     grad.offset, grad.color, grad.count,
-//                                     opacity);
-//    }
-//    throw new RuntimeException("Not a linear gradient.");
-//  }
-
-
-//  protected Shader calcGradientPaint(Gradient gradient,
-//                                    float cx, float cy, float r) {
-//    if (gradient instanceof RadialGradient) {
-//      RadialGradient grad = (RadialGradient) gradient;
-//      return new RadialGradientPaint(cx, cy, r,
-//                                     grad.offset, grad.color, grad.count,
-//                                     opacity);
-//    }
-//    throw new RuntimeException("Not a radial gradient.");
-//  }
-
-
   // . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
 
 
-  @Override
-  protected void styles(PGraphics g) {
-    super.styles(g);
-
-    if (g instanceof PGraphicsAndroid2D) {
-      PGraphicsAndroid2D gg = (PGraphicsAndroid2D) g;
-
-      if (strokeGradient != null) {
-//        gg.strokeGradient = true;
-//        gg.strokeGradientObject = strokeGradientPaint;
-        gg.strokePaint.setShader(strokeGradientPaint);
-      }
-      if (fillGradient != null) {
-//        p2d.fillGradient = true;
-//        p2d.fillGradientObject = fillGradientPaint;
-        gg.fillPaint.setShader(fillGradientPaint);
-      }
-    }
-  }
-
-
-  // . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-
-
-  //public void drawImpl(PGraphics g) {
-  // do nothing
-  //}
-
-
-  // . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-
-
-  public class Font extends PShapeSVG {
+  public static class Font extends PShapeSVG {
     public FontFace face;
 
-    public HashMap<String,FontGlyph> namedGlyphs;
-    public HashMap<Character,FontGlyph> unicodeGlyphs;
+    public Map<String, FontGlyph> namedGlyphs;
+    public Map<Character, FontGlyph> unicodeGlyphs;
 
     public int glyphCount;
     public FontGlyph[] glyphs;
@@ -1699,8 +1603,8 @@ public class PShapeSVG extends PShape {
 
       horizAdvX = properties.getInt("horiz-adv-x", 0);
 
-      namedGlyphs = new HashMap<String,FontGlyph>();
-      unicodeGlyphs = new HashMap<Character,FontGlyph>();
+      namedGlyphs = new HashMap<String, FontGlyph>();
+      unicodeGlyphs = new HashMap<Character, FontGlyph>();
       glyphCount = 0;
       glyphs = new FontGlyph[elements.length];
 
@@ -1716,7 +1620,7 @@ public class PShapeSVG extends PShape {
               namedGlyphs.put(fg.name, fg);
             }
             if (fg.unicode != 0) {
-              unicodeGlyphs.put(new Character(fg.unicode), fg);
+              unicodeGlyphs.put(Character.valueOf(fg.unicode), fg);
             }
           }
           glyphs[glyphCount++] = fg;
@@ -1742,7 +1646,7 @@ public class PShapeSVG extends PShape {
       // 1) scale by the 1.0/unitsPerEm
       // 2) scale up by a font size
       g.pushMatrix();
-      float s =  size / (float) face.unitsPerEm;
+      float s =  size / face.unitsPerEm;
       //System.out.println("scale is " + s);
       // swap y coord at the same time, since fonts have y=0 at baseline
       g.translate(x, y);
@@ -1750,7 +1654,7 @@ public class PShapeSVG extends PShape {
       char[] c = str.toCharArray();
       for (int i = 0; i < c.length; i++) {
         // call draw on each char (pulling it w/ the unicode table)
-        FontGlyph fg = (FontGlyph) unicodeGlyphs.get(new Character(c[i]));
+        FontGlyph fg = unicodeGlyphs.get(Character.valueOf(c[i]));
         if (fg != null) {
           fg.draw(g);
           // add horizAdvX/unitsPerEm to the x coordinate along the way
@@ -1765,10 +1669,10 @@ public class PShapeSVG extends PShape {
 
     public void drawChar(PGraphics g, char c, float x, float y, float size) {
       g.pushMatrix();
-      float s =  size / (float) face.unitsPerEm;
+      float s =  size / face.unitsPerEm;
       g.translate(x, y);
       g.scale(s, -s);
-      FontGlyph fg = (FontGlyph) unicodeGlyphs.get(new Character(c));
+      FontGlyph fg = unicodeGlyphs.get(Character.valueOf(c));
       if (fg != null) g.shape(fg);
       g.popMatrix();
     }
@@ -1779,7 +1683,7 @@ public class PShapeSVG extends PShape {
       char[] c = str.toCharArray();
       for (int i = 0; i < c.length; i++) {
         // call draw on each char (pulling it w/ the unicode table)
-        FontGlyph fg = (FontGlyph) unicodeGlyphs.get(new Character(c[i]));
+        FontGlyph fg = unicodeGlyphs.get(Character.valueOf(c[i]));
         if (fg != null) {
           w += (float) fg.horizAdvX / face.unitsPerEm;
         }
@@ -1792,7 +1696,7 @@ public class PShapeSVG extends PShape {
   // . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
 
 
-  class FontFace extends PShapeSVG {
+  static class FontFace extends PShapeSVG {
     int horizOriginX;  // dflt 0
     int horizOriginY;  // dflt 0
 //    int horizAdvX;     // no dflt?
@@ -1829,7 +1733,7 @@ public class PShapeSVG extends PShape {
   // . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
 
 
-  public class FontGlyph extends PShapeSVG {  // extends Path
+  public static class FontGlyph extends PShapeSVG {  // extends Path
     public String name;
     char unicode;
     int horizAdvX;
